[package]
name = "nier_macros"
version = "0.1.0"
authors = ["Jack Frost <j4qfrost@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
cache-macro = { git = "https://github.com/j4qfrost/cache-macro.git" }
lazy_static = "1.4"
lru = "0.6"
quote = "1.0"
ron = "0.6"
syn = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
nier = { path = "../nier" }

[[example]]
name = "dfa"
path = "../examples/dfa.rs"

[[example]]
name = "dfa_with_macro"
path = "../examples/dfa_with_macro.rs"